# json-scheme-gen

./: CHANGELOG.md  README.md  json-scheme-gen.cabal  test.json
app/: Main.hs
lib/: JsonScheme.hs
tests/: AppTest.hs  test.json
